# letter

./: .gitignore  Cargo.toml  README.md
cli/: .gitignore  Cargo.toml  README.md  headings-styles.lst  headings.lsc  meta_data.toml  proposal.lsc  sample.lsc  sample2.lsc  simple.lsc  simple2.lsc  simple3.lsc  styles.lst
cli/src/: main.rs
docs/: draft.drawio
document/: Cargo.toml
document/src/: lib.rs
document/src/meta_data/: author.rs  encoding.rs  language.rs  mod.rs  variables.rs  version.rs
document/src/structure/: mod.rs  node.rs  source_position.rs  source_span.rs  value.rs
document/src/style/: definition.rs  font_family.rs  font_stretch.rs  font_style.rs  font_variation_settings.rs  font_weight.rs  id.rs  mod.rs  pseudo_class.rs  resolver.rs  text_alignment.rs
export/: Cargo.toml  README.md
export/src/: export_type.rs  lib.rs  result.rs
export/src/pdf/: mod.rs
font/: Cargo.toml
font/src/: font.rs  id.rs  lib.rs  style.rs  variation.rs
layout/: Cargo.toml  README.md
layout/src/: lib.rs  options.rs  result.rs
layout/src/context/: insets.rs  mod.rs  page_sizing.rs  style.rs
layout/src/element/: bounds.rs  constraints.rs  id.rs  layout.rs  mod.rs  page.rs  position.rs  size.rs
layout/src/element/content/: mod.rs  text_slice.rs
layout/src/rule/: default.rs  mod.rs  root.rs  section.rs  text.rs
layout/src/rule/inline/: font_util.rs  line_breaker.rs  mod.rs  transformer.rs
layout/src/rule/inline/item/: box_item.rs  glue_item.rs  mod.rs  penalty_item.rs
layout/src/rule/inline/item/box_content/: mod.rs
metadata/: Cargo.toml
metadata/src/: lib.rs
script/: Cargo.toml  README.md
script/src/: document_structure.rs  lib.rs  source_position_resolver.rs
style/: Cargo.toml
style/src/: lib.rs  lst.pest  result.rs
typeset/: Cargo.toml
typeset/src/: context.rs  lib.rs  result.rs  text.rs
unit/: Cargo.toml
unit/src/: lib.rs
(+56 files in other folders)
