[package]
name = "letter"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Eder <barny.eder@gmail.com>"]
license = "MIT"
description = "Document layout engine"
readme = "README.md"
repository = "https://github.com/bennyboer/letter"

[dependencies]
script = { path = "../script" }
log = "0.4.17"
simple_logger = "2.2.0"
