[package]
name = "layout"
version = "0.1.0"
edition = "2021"

[dependencies]
unit = { path = "../unit" }
font = { path = "../font" }
document = { path = "../document" }
typeset = { path = "../typeset" }
paragraph-breaker = "0.4.4"
log = "0.4.17"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]
